--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@ p {
 
 <body>
  <div class="birthdayCard">
-<div class="cardFront"><h3 class="happy">HAPPY BIRTHDAY!</h3>
+<div class="cardFront">
+<h3 class="happy"> I wanna wish a HAPPY BIRTHDAY!</h3>
 <div class="balloons">
   <div class="balloonOne"></div>
   <div class="balloonTwo"></div>
@@ -175,10 +176,10 @@ p {
 </div>
 </div>
 <div class="cardInside">
-    <h3 class="back">HAPPY BIRTHDAY!</h3>
+    <h3 class="back">HAPPY BIRTHDAY NIDHI!</h3>
     <p>Dear best friend,</p> 
     <p>Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
-    <p class="name">Praween</p>
+    <p class="name">Kunal</p>
   </div>
 </div
   <script src="main.js"></script>
